# community

./: .gitignore  CMakeLists.txt  FIGMA_INTEGRATION.md  README.md  TESTING.md  build.bat  build_msvc.bat  index.html  mongodb_config.txt  next.config.ts  package-lock.json  package.json  run_server.bat  server.js
public/: app.js  auth.js  figma-app.js  index.html  login.html  signup.html  store-page.js  store.html  store.js  styles.css
public/figma-to-html-4/: index.html
public/figma-to-html-4/css/: main.css
src/Backend/: Cart.cpp  Cart.h  LoginService.cpp  LoginService.h  MongoDBService.cpp  MongoDBService.h  PurchaseHistory.cpp  PurchaseHistory.h  PurchaseService.cpp  PurchaseService.h  SearchService.cpp  SearchService.h  Server.cpp  Server.h  SettingsService.cpp  SettingsService.h  main.cpp
src/app/: globals.css  layout.tsx  page.tsx  profile.tsx
tests/: PURCHASE_HISTORY_VIDEO_SCRIPT.md  README.md  TEST_COVERAGE.md  cart_tests.cpp  catch.hpp  login_tests.cpp  logout_tests.cpp  mongodb_tests.cpp  purchase_history_tests.cpp  purchase_tests.cpp  run_login_tests.bat  run_login_tests_simple.ps1  run_purchase_tests.bat  run_purchase_tests_simple.ps1  run_tests_vs.ps1  search_tests.cpp  settings_tests.cpp
